We have succesfully jamed enough square pegs into the round hole that it now works

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "An app that is basically your gym journal plain and simple.",
   "main": "index.js",
   "scripts": {
-    "start": "if-env NODE_ENV-production && npm run start:prod || nom run start:dev",
-    "start-dev": "webpack-dev-server --inline --content-base public/ --history-api-fallback",
-    "start-prod": "webpack && node server.js",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:dev": "webpack-dev-server --inline --content-base public/ --history-api-fallback",
+    "start:prod": "webpack && node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
